Adding a month scope in the Date selection diagram.